Instant crash on Duplicate Area into new Window in fullscreen mode. #114838

Closed
opened 2023-11-14 14:28:17 +01:00 by Denis Belov · 5 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42

Blender Version
Broken: version: 4.0.0 Release Candidate, branch: blender-v4.0-release, commit date: 2023-11-10 13:29, hash: c688b038473a
Worked: (newest version of Blender that worked as expected)

Short description of error
Instant crash on duplicating Outliner into new window in fullscreen mode. In default window mode duplicate works.

Exact steps for others to reproduce the error
Toggle blender window fullscreen. Shift+LMB drag on Outliner's corner = crash.

**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.42 **Blender Version** Broken: version: 4.0.0 Release Candidate, branch: blender-v4.0-release, commit date: 2023-11-10 13:29, hash: `c688b038473a` Worked: (newest version of Blender that worked as expected) **Short description of error** Instant crash on duplicating Outliner into new window in fullscreen mode. In default window mode duplicate works. **Exact steps for others to reproduce the error** Toggle blender window fullscreen. Shift+LMB drag on Outliner's corner = crash.
Denis Belov added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-14 14:28:18 +01:00

When replicating the steps I came across this assert in a Debug build:

BLI_assert failed: D:\BlenderDev\blender\source\blender\editors\space_outliner\outliner_tree.cc:1163, outliner_build_tree(), at 'space_outliner->runtime->tree_display != nullptr'
  Skipping rebuild before tree was built properly, a full redraw should be triggered instead

So confirming any way.

That assert was added in 1f85877263
So, @JulianEisel, maybe you're the right person to investigate this crash?

When replicating the steps I came across this assert in a Debug build: ``` BLI_assert failed: D:\BlenderDev\blender\source\blender\editors\space_outliner\outliner_tree.cc:1163, outliner_build_tree(), at 'space_outliner->runtime->tree_display != nullptr' Skipping rebuild before tree was built properly, a full redraw should be triggered instead ``` So confirming any way. That assert was added in 1f85877263 So, @JulianEisel, maybe you're the right person to investigate this crash?
Germano Cavalcante added
Module
User Interface
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-11-14 21:02:39 +01:00
Member

Crash introduced between 3.6-4.0, so raising the priority.

Crash introduced between 3.6-4.0, so raising the priority.
Pratik Borhade added
Priority
High
and removed
Priority
Normal
labels 2023-11-15 12:57:15 +01:00
Member

Problem seems to be due to missing redraw/rebuild of tree when in full screen, checking.

Problem seems to be due to missing redraw/rebuild of tree when in full screen, checking.
Member

Caused by 486086d349
@ideasman42 ^

Caused by 486086d349aa0c471ba56e3ae703b697d4749e7f @ideasman42 ^

Looking into this and I can´t redo this, it seems strange that the issue would occur on WIN32 & macOS but not Linux Wayland or X11.

I'll try some different configurations and see if I can redo it.

Looking into this and I can´t redo this, it seems strange that the issue would occur on WIN32 & macOS but not Linux Wayland or X11. I'll try some different configurations and see if I can redo it.
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-12-08 23:00:44 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-08 23:45:31 +01:00
Brecht Van Lommel added the
Interest
User Interface
label 2023-12-11 16:02:02 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#114838
No description provided.